- added company to worker

--- a/wksp/timehammer/src/main/resources/ValidationMessages_es_ES.properties
+++ b/wksp/timehammer/src/main/resources/ValidationMessages_es_ES.properties
@@ -1,2 +1,4 @@
-TimeIntervalValid.message=Intervalo de tiempo erróneo
-TimestampFormValid.message=Fecha inválida
+com.kronostools.timehammer.dto.form.validation.TimeIntervalValid.message=Intervalo de tiempo erróneo
+com.kronostools.timehammer.dto.form.validation.TimestampFormValid.message=Fecha inválida
+com.kronostools.timehammer.dto.form.validation.CompanyValid.message=Compañía seleccionada inválida
+com.kronostools.timehammer.dto.form.validation.CityValid.message=Ciudad seleccionada inválida
